k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wip-planner-frontend
  labels:
    app: wip-planner-frontend
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: wip-planner-frontend
    tier: frontend
