k8s/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wip-planner-frontend
  labels:
    app: wip-planner-frontend
    tier: frontend
spec:
  to:
    kind: Service
    name: wip-planner-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
